--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 .idea/*
 cmake-build-debug/*
+CMakeCache.txt
+CMakeFiles/
+CTestTestfile.cmake
+Makefile
+cmake_install.cmake
+posit_c.cbp
+tests/Testing/*
+tests/test_posit
+posit_c
