--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-.idea/*
-cmake-build-debug/*
+.idea/
+cmake-build-debug/
 CMakeCache.txt
 CMakeFiles/
 CTestTestfile.cmake
 Makefile
 cmake_install.cmake
 posit_c.cbp
-tests/Testing/*
+tests/Testing/
 tests/test_posit
 posit_c
-Testing/*
-.vscode/*
+Testing/
+.vscode/
