Created a method to give directly posit binary and to get double out of it but need to change the names

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,16 @@ add_executable(test_posit
         ../src/Posit.h
         )
 
+add_executable(test_posit_float
+        posit_create_float.cpp
+        ../src/Posit.cpp
+        ../src/Posit.h
+        )
+
 add_test(
-        mytest test_posit
+        creatingPositByFloat test_posit
+)
+
+add_test(
+        creatingFloatByPosit test_posit_float
 )
