Started toFloat function for posit

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,12 @@ add_executable(test_posit
         ../src/Posit.h
         )
 
+add_executable(test_posit_double
+        posit_create_double.cpp
+        ../src/Posit.cpp
+        ../src/Posit.h
+        )
+
 add_executable(test_posit_float
         posit_create_float.cpp
         ../src/Posit.cpp
@@ -12,6 +18,10 @@ add_executable(test_posit_float
 
 add_test(
         creatingPositByFloat test_posit
+)
+
+add_test(
+        creatingDoubleByPosit test_posit_double
 )
 
 add_test(
