Added a function to extract float fields but not implemented.
Extracted duplication of code in tests.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,18 +2,32 @@ add_executable(test_posit
         posit_create.cpp
         ../src/Posit.cpp
         ../src/Posit.h
+        ./Utils.h
+        ./Utils.cpp
         )
 
 add_executable(test_posit_double
         posit_create_double.cpp
         ../src/Posit.cpp
         ../src/Posit.h
+        ./Utils.h
+        ./Utils.cpp
         )
 
 add_executable(test_posit_float
         posit_create_float.cpp
         ../src/Posit.cpp
         ../src/Posit.h
+        ./Utils.h
+        ./Utils.cpp
+        )
+
+add_executable(test_posit_extraction
+        extractFields.cpp
+        ../src/Posit.cpp
+        ../src/Posit.h
+        ./Utils.h
+        ./Utils.cpp
         )
 
 add_test(
@@ -26,4 +40,8 @@ add_test(
 
 add_test(
         creatingFloatByPosit test_posit_float
+)
+
+add_test(
+        extractFields test_posit_extraction
 )
