Started Addition operation of two posits

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -22,6 +22,14 @@ add_executable(test_posit_float
         ./Utils.cpp
         )
 
+add_executable(test_posit_add
+        posit_add.cpp
+        ../src/Posit.cpp
+        ../src/Posit.h
+        ./Utils.h
+        ./Utils.cpp
+        )
+
 add_test(
         creatingPositByFloat test_posit
 )
@@ -32,4 +40,8 @@ add_test(
 
 add_test(
         creatingFloatByPosit test_posit_float
+)
+
+add_test(
+        AddingTwoPosits test_posit_add
 )
