--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,21 @@
+add_executable(
+        unit_tests
+        example_add.cpp
+)
+
+target_link_libraries(
+        unit_tests
+        gtest_main
+        Posit
+)
+
+add_test(
+        NAME
+            unit
+        COMMAND
+            ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/unit_tests
+)
+
 add_executable(all_tests
         tests.cpp
         ../src/Posit.cpp
