--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
           command: 'apt-get update && sudo apt-get install -y git'
       - run:
           name: Install CMAKE
-          command: 'apt-get update && sudo apt-get install -y cmake=3.10.2-1ubuntu2'
+          command: 'apt-get update && sudo apt-get install -y cmake=3.10.2-Linux-x86_64'
       - run:
           name: Building make files
           command: 'cmake .'
